# SOA-Project

./: CMakeLists.txt  README.md  WaitQueue.c  WaitQueue.h  main.c
Hardware/: MemoryAlignment.c  MemoryAlignment.h
KernelSide/: CharDeviceFile.c  CleaningFunctions.c  CleaningFunctions.h  Common.h  DelayedOperations.c  DelayedOperations.h  DriverAttributes.c  DriverAttributes.h  KObjectManagement.c  KObjectManagement.h  KernelLogManagement.c  KernelLogManagement.h  Makefile  MessagesManagement.c  MessagesManagement.h  Module.c  ModuleFunctions.c  ModuleFunctions.h  ModuleInformations.h  ModuleInstallationScript.sh  ModuleMetadata.h  ModuleUninstallScript.sh  RCURedBlackTree.c  RCURedBlackTree.h  TMSDeviceDriver.c  TMSDeviceDriver.h  TMSModule.c  TMSModule.h  WaitFreeQueue.c  WaitFreeQueue.h
KernelSide/BasicOperations/: BasicDefines.h  BasicOperations.c  BitManipulation.h  SynchronizationPrimitives.h
KernelSide/Common/: BasicDefines.h  BasicOperations.c  BasicOperations.h  KObjectManagement.c  KObjectManagement.h  ModuleMetadata.h  SynchronizationPrimitives.h
KernelSide/DataStructure/: DataUnit.c  DataUnit.h  DeviceFileInstance.c  (+23 more)
Module/: TimeMessageSystemModule.c  TimeMessageSystemModule.h
SynchronizationPrimitives/: SynchronizationPrimitives.c  SynchronizationPrimitives.h
UserSide/: BasicCommon.c  BasicCommon.h  FileOperationsTests.c  FileOperationsTests.h  Tests.c  Tests.h
WaitFreeQueue/: DataCell.c  DataCell.h  LockFreeQueue.c  LockFreeQueue.h  Requests.c  Requests.h  ThreadsPool.c  ThreadsPool.h  WaitFreeQueue.c  WaitFreeQueue.h  WaitQueue.c  WaitQueue.h
